--- a/final/rf_lab_final2.tex
+++ b/final/rf_lab_final2.tex
@@ -165,12 +165,10 @@ and power detector. These may come separately or be incorporated in a single dev
 In both cases, the DDU module is connected the in between the source and the detector.
 We used both approaches, and made two measurements with equal power levels.
 
-For separate signal generation and detection, we used Rohde \& Schwarz SML03 signal 
-generator and HP 8596E spectrum analyzer. The measurement setup is shown in Figures 
-\ref{f:sg1} and \ref{f:sg2}. The setup where VNA is used is shown in Figures \ref{f:vna1} 
-and \ref{f:vna2}. The attenuation caused by the two cables measured a cable at a time 
-using VNA in a similar configuration. All equipment were calibrated before any measurements 
-were carried out.
+For separate signal generation and detection, we used \textit{Rohde \& Schwarz SML03} signal 
+generator (SG) and \textit{HP 8596E} spectrum analyzer.The measurement setup is shown in Figures 
+\ref{f:sg1} and \ref{f:sg2}. The setup employing \textit{Rohde \& Schwarz ZVL} VNA is shown in 
+Figures \ref{f:vna1} and \ref{f:vna2}. All equipment came precalibrated.
 
 \begin{figure}[h!]
 	\begin{center}
@@ -203,14 +201,17 @@ were carried out.
 \begin{figure}[h!]
 	\begin{center}
 	\setlength{\unitlength}{1mm}
-	\begin{picture}(126, 10)
+	\begin{picture}(155, 10)
 		\linethickness{0.2mm}
 		\put(0, 0.4){\framebox[29mm]{VNA (Port 1)}}
-		\put(29, 1.4){\vector(1,0){20}}
-		\put(49, 0.4){\framebox[28mm]{$\mathrm{ANT} \rightarrow \mathrm{RX}_1$}}
-		\put(77, 1.4){\vector(1,0){20}}
-		\put(97, 0.4){\framebox[29mm]{VNA (Port 2)}}
-		\put(63, 7){\makebox(0,0){DDU module}}
+		\put(29, 1.4){\vector(1,0){15}}
+		\put(44, 0.4){\framebox[28mm]{$\mathrm{ANT} \rightarrow \mathrm{RX}_1$}}
+		\put(72, 1.4){\vector(1,0){15}}
+		\put(87, 0.4){\framebox[24mm]{Attenuator}}
+		\put(111, 1.4){\vector(1,0){15}}
+		\put(126, 0.4){\framebox[29mm]{VNA (Port 2)}}
+		\put(58, 7){\makebox(0,0){DDU module}}
+		\put(99, 7){\makebox(0,0){$L = 20$ dB}}
 	\end{picture}
 	\vspace*{\halfLine}
 	\caption{VNA measurements connections}
@@ -228,50 +229,172 @@ were carried out.
 	\vspace*{-12pt}
 \end{figure}
 
+In essence, the measurement was a power sweep at a constant frequency of 
+$f = 900$ MHz; mapping detected power or gain against used input power. 
+This raw data was later postprocessed using Matlab.
+
+We started with a source power of $-40$~dBm; a power level well below the 
+1~dB compression point. The power was gradually used in steps of first 
+10~dB, then 5~dB and finally 1~dB, until clear compression was observed. 
+Compression may be seen in the lower than expected values of detected 
+power (SG \& SA), or equivalently as lower gain (VNA).
+
+Since we were measuring a GSM receiver, we used settings found in the GSM 
+specification for the spectrum analyzer with the expeception of smaller 
+averaging factor. They settings were as follows: an averaging factor of 100, 
+zero span and 30~kHz video and resolution bandwidths. Input attenuation of the 
+spectrum analyzer was increased from 10~dB all the way to 30~dB as we moved onto 
+higher powers. 
+
+The two cables and attenuators were measured separately using a VNA. For the VNA, 
+the measurement settings throughout this lab were as follows: 1601 points over 
+a frequency range of $800 \ldots 1000$~MHz, a measurement bandwidth of 10~kHz 
+and averaging over 200 samples.
+
+For more accurate and/or reliable SA measurements, even a larger attenuation factor 
+could have been used to avoid the small, yet possible, compression in the SA. One 
+chould have also not trusted the quality of the SG as much than we did. The whole 
+power sweep should have also been recorded without the DDU-module in between.
+Also, there was some oversigth in making the connections as can be seen in 
+Fig.~\ref{f:vna2}. As its only an attenuator in a transmission measurement, 
+there is most likely no great an impact on the results as such. Nevertheless, 
+it begs to question connector repeatability.
 
 
+\subsection{Frequency response}
 
-The measurement setup suitable for measuring measurement is shown in Fig. \ref{f:m1}. 
-A signal generator is used as a signal source, and the generated signal is passed 
-through the DDU module before detection with a (precalibrated) spectrum analyzer. 
-The input and output connections used in the DDU module are ANT and RX$_1$, 
-respectively. An attenuator is used between the generator and the DDU module, 
-if necessary. While the operator's manual of the R\&S SML03 signal generator 
-does not explicitly mention the power range, the testing range defined in the 
-\textit{Performance Tests} suggests a (reliable) minimum output power level 
-of $-80$~dBm.
+The frequency response was already measured in the first labs using a VNA. Thus 
+we didn't need to measure the gain in these labs, as we used the results from 
+the first labs. While the measurement procedure was given in the final report of 
+the first labs, it is repeated here for completeness.
+
+The measurement was carried out using a \textit{Rohde \& Schwarz ZVL} VNA, 
+calibrated by the assistant prior to our arrival. The calibration settings were 
+as follows: full two-port calibration with 1577 points within the $850 \ldots 1000$ 
+MHz band, $-20$ dBm reference power, and an averaging factor of 100. The reference 
+plane was located at the non-VNA end of used the cables.
+
+The actual measurement included connecting the VNA the port pairs in order to obtain 
+the absolute values of $S_{12}$ parameter over a set frequency range. In terms of physical 
+connections, this would mean the following: VNA (Port 2) $\rightarrow$ DDU modul $\rightarrow$ VNA (Port 1). 
+The raw data was stored onto a USB-memory as \texttt{*.s1p} files for post processing 
+using Matlab.
 
 
+\subsection{Noise temperature}
 
-The measurement itself is basically a power sweep at a constant frequency of 
-$f = 900$ MHz. We start off with a power level well above the receiver sensitivity 
-level ($P_\mathrm{min,\;BS} \approx -112.5$~dBm), say $-100$~dBm. From there we 
-gradually increase the power in suitable steps of $0.1 \ldots 10$~dB, depending on 
-the current position on the $P_\mathrm{out}(P_\mathrm{in})$ transfer curve. That 
-is, we'll start with a big step size and decrease it as we get close to the 
-``sweet spot''. 
+ENR = 21.48 dB
 
-This power sweep is continued until we experience a compression of more than the 
-required 1 dB. While one could just measure the input power required for the output 
-to be 1 dB less than the expected value, this type of ``on-the-fly'' comparison 
-is prone to error. Thus it's better to measure a full power sweep and leave the 
-comparison to be done after the measurement and against a fitted straight representing 
-ideal behaviour.
+In the third measurement task, we'll use a setup shown in Fig. \ref{f:m3}. 
+A DC-voltage source is connected to a noise diode connected directly to the 
+ANT-input in the pre-amplifier block. This direct connection is desirable as 
+attenuation changes the noise temperature. The signal is led from the RX$_1$ 
+output to a spectrum analyzer. An LNA may be needed in between the DDU output 
+and the spectrum analyzer, as the spectrum analyzer might not be sensitive 
+enough for the cold noise source.
 
-Since we are dealing with a GSM receiver, we may use the same settings for the 
-spectrum analyzer as we did in the first labs -- except for the averaging factor. 
-They were as follows: an averaging factor of 500, zero span and 30~Hz video and 
-resolution bandwidths. An averaing factor of 500 would make the measurement quite 
-lengthy, especially if dense power ``grid'' is used. Averaging over 100 measurements 
-will most likely be more than adequate. Depending on the 1~dB compression point, 
-we might need to watch out for compression in the spectrum analyzer. This is taken 
-care of by altering the input attenuation.
+\begin{figure}[h!]
+	\begin{center}
+	\setlength{\unitlength}{1mm}
+	\begin{picture}(163, 13)
+		\linethickness{0.2mm}
+		\put(0, 0.4){\framebox[10mm]{$V_\mathrm{DC}$}}
+		\put(10, 1.4){\vector(1,0){12}}
+		\put(22, 0){\framebox[25mm]{Noise diode}}
+		\put(47, 1.4){\vector(1,0){12}}
+		\put(59, 0.4){\framebox[28mm]{$\mathrm{ANT} \rightarrow \mathrm{RX}_1$}}
+		\put(87, 1.4){\vector(1,0){12}}
+		\put(99, 0.4){\framebox[12mm]{LNA}}
+		\put(111, 1.4){\vector(1,0){12}}
+		\put(123, 0.4){\framebox[40mm]{Sprectrum analyzer}}
+		\put(5, 7){\makebox(0,0){0/28 V}}
+		\put(73, 7){\makebox(0,0){DDU module}}
+	\end{picture}
+	\vspace*{\halfLine}
+	\caption{Noise temperature measurement setup}
+	\label{f:m3}
+	\end{center}
+	\vspace*{-12pt}
+\end{figure}
 
-The effect of the cables and the attenuator may be measured using a VNA (could be used 
-for the entire measurement aswell), or using the SA by making the whole measurement 
-relative. In a relative measurement, the power is measured again when the DDU module 
-is by-passed to account only for the cables and the possible attenuator. This also 
-required to know the real input power. 
+The measurement itself is carried out measuring two power levels required in the 
+Y-pa\-ram\-e\-ter; when the DC-voltage is off/shorted (``cold'') and on (``hot''). As 
+for the SA settings, we are measuring noise at a single frequency (using zero-span): 
+a very weak, random signal. Thus, input attenuator should be disabled, and minimum 
+resolution bandwith used. A large averaging factor, say a thousand, is also beneficial. 
+The measurement may take a few minutes, and it's OK; there are only two measurements 
+to be made.
+
+\begin{figure}[h!]
+	\begin{center}
+	\includegraphics[width=0.75\textwidth]{img/nd-ddu-sa.jpg}
+	\caption{Receiver under study.}
+	\label{f:nd}
+	\end{center}
+	\vspace*{-12pt}
+\end{figure}
+
+
+\subsection{Sensitivity}
+
+In the sensitivity measurement, we're trying to measure the minimum input power at 
+ANT input that results in a detectable signal above the noise floor in the ouput 
+of the DDU module. For this, a measurement setup identical to the one used in the 
+first task may be used, as is shown in the following figure (Fig \ref{f:m4}). This 
+time though it's more than likely that an attenuator is required.
+
+\begin{figure}[h!]
+	\begin{center}
+	\setlength{\unitlength}{1mm}
+	\begin{picture}(142, 13)
+		\linethickness{0.2mm}
+		\put(0, 0.4){\framebox[34mm]{Signal generator}}
+		\put(34, 1.4){\vector(1,0){20}}
+		\put(54, 0.4){\framebox[28mm]{$\mathrm{ANT} \rightarrow \mathrm{RX}_1$}}
+		\put(82, 1.4){\vector(1,0){20}}
+		\put(102, 0.4){\framebox[40mm]{Sprectrum analyzer}}
+		\put(68, 7){\makebox(0,0){DDU module}}
+	\end{picture}
+	\vspace*{\halfLine}
+	\caption{Measurement setup used in the sensitivity measurement.}
+	\label{f:m4}
+	\end{center}
+	\vspace*{-12pt}
+\end{figure}
+
+The measurement starts by measuring the noise floor at 900~MHz without any signal 
+we're hoping to detect. That is, the RF power is switched off at the generator. 
+Then we turn on an input signal that's some dBs sensitivity of $-112.5$~dBm. We 
+gradually increase the power until the signal-to-noise ratio is no less than the 
+10~dB required by the standard. One could also measure the power required to beat 
+the noise just barely, and add the SNR later on if  $P_\mathrm{out}(P_\mathrm{in})$ 
+relation is assumed to be ideal.
+
+Since it's a GSM system, we use the measurement settings as they are defined in 
+the standard. They are as follows: an averaging factor of 500, zero span and 30~Hz 
+video and resolution bandwidths. As the spectrum analyzer input power is expected 
+to be less than $-80$~dBm ($P_\mathrm{SA} \approx P_\mathrm{DDU,\;min} + G_\mathrm{DDU} = -112.5 \mathrm{\;dBm} + 24.4 \mathrm{\;dB}= -88.1 \mathrm{\;dBm}$), 
+it's best to disable the input attenuator.
+
+
+\newpage
+\section{Results}
+
+TODO: Huy and Sampo (general results and intro to more specific results)
+
+
+\subsection{1~dB compression point}
+
+\begin{figure}
+\centering
+\subcaptionbox{$P_\mathrm{out}(P_\mathrm{in})$ using SG \& SA}{\epsfig{file=img/PoutPin1.eps, width=0.45\textwidth}}
+\subcaptionbox{$P_\mathrm{out}(P_\mathrm{in})$ using VNA}{\epsfig{file=img/PoutPin2.eps, width=0.45\textwidth}}
+\subcaptionbox{$G(P_\mathrm{in})$ using SG \& SA}{\epsfig{file=img/GPin1.eps, width=0.45\textwidth}}
+\subcaptionbox{$G(P_\mathrm{in})$ using VNA}{\epsfig{file=img/GPin2.eps, width=0.45\textwidth}}
+\subcaptionbox{$G(P_\mathrm{out})$ using SG \& SA}{\epsfig{file=img/GPout1.eps, width=0.45\textwidth}}
+\subcaptionbox{$G(P_\mathrm{out})$ using VNA}{\epsfig{file=img/GPout2.eps, width=0.45\textwidth}}
+\caption{Results from the 1~dB compression point measurements. Ideal behaviour is shown with red straights, measuremets with blue markers and spline inter-/extrapolant in blue.}\label{f:1dB}
+\end{figure}
 
 
 \subsection{Frequency response}
@@ -337,168 +460,6 @@ the $S_12$ drops roughly 100~dB from $+20$~dB to $-80$~dB. This corresponds to a
 of $3.3$~dB/MHz (29~dB/\%) and $-20$~dB/MHz ($-180$~dB/\%), respectively. The effect of 
 such steep slopes are neglectable, and thus the 3~dB bandwidth may be used as the noise 
 bandwidth.
-
-If a VNA is not available as the instructions suggest, the task is quite laborious and 
-absurd, just to be honest. Nevertheless, the procedure is listed here for completeness. 
-We would need to simulate the VNA function manually using a signal generator and a power 
-meter or a signal analyzer, leading to a setup like the one shown in Fig. \ref{f:m1}. The
-output power is kept constant while frequency is swept over the range, taking notes on the 
-relative power levels observed in the detector.
-
-\begin{comment} % As an example
-\begin{table}[!h]
-	\begin{center}
-	\caption{Two-ports measured with the VNA.}
-	\label{tbl:2p}
-	\renewcommand*{\arraystretch}{1.2}
-	\begin{tabular}{ll}
-	\textbf{Measurement} & \textbf{Two-port} \\
-	\hline
-	3.1 $-$ 3.3		& SMA-cable $+$ attenuator chain $+$ N-cable $+$ required adapters \\
-	3.4 (a)			& $\mathrm{TX_B \rightarrow ANT_B}$ 	\\
-	3.4 (b)			& $\mathrm{TX_B \rightarrow RX_{B1}}$ 	\\
-	3.4 (c)			& $\mathrm{ANT_B \rightarrow RX_{B1}}$
-	\end{tabular}
-	\end{center}
-	\vspace*{-12pt}
-\end{table}
-\end{comment}
-
-
-\subsection{Noise temperature}
-
-ENR = 21.48 dB
-
-In the third measurement task, we'll use a setup shown in Fig. \ref{f:m3}. 
-A DC-voltage source is connected to a noise diode connected directly to the 
-ANT-input in the pre-amplifier block. This direct connection is desirable as 
-attenuation changes the noise temperature. The signal is led from the RX$_1$ 
-output to a spectrum analyzer. An LNA may be needed in between the DDU output 
-and the spectrum analyzer, as the spectrum analyzer might not be sensitive 
-enough for the cold noise source.
-
-\begin{figure}[h!]
-	\begin{center}
-	\setlength{\unitlength}{1mm}
-	\begin{picture}(163, 13)
-		\linethickness{0.2mm}
-		\put(0, 0.4){\framebox[10mm]{$V_\mathrm{DC}$}}
-		\put(10, 1.4){\vector(1,0){12}}
-		\put(22, 0){\framebox[25mm]{Noise diode}}
-		\put(47, 1.4){\vector(1,0){12}}
-		\put(59, 0.4){\framebox[28mm]{$\mathrm{ANT} \rightarrow \mathrm{RX}_1$}}
-		\put(87, 1.4){\vector(1,0){12}}
-		\put(99, 0.4){\framebox[12mm]{LNA}}
-		\put(111, 1.4){\vector(1,0){12}}
-		\put(123, 0.4){\framebox[40mm]{Sprectrum analyzer}}
-		\put(5, 7){\makebox(0,0){0/28 V}}
-		\put(73, 7){\makebox(0,0){DDU module}}
-	\end{picture}
-	\vspace*{\halfLine}
-	\caption{Noise temperature measurement setup}
-	\label{f:m3}
-	\end{center}
-	\vspace*{-12pt}
-\end{figure}
-
-%In room temperature, a matched load (an approximation in this case) outputs a noise power 
-%of $-159$ dBm for a 30 Hz band. With a maximum gain of 24.4~dB and a total noise figure 
-%of 3.9~dB, the expected noise level is around $-131$~dBm. This value is considerably 
-%lower than the given sensitivity of the SA: $P_\mathrm{SA,\;min} < -125$~dBm when 
-%$B_\mathrm{res.} = 30$~Hz. LNA could be used to boost the signal to a more appropriate 
-%level as it's effect on the noise temperature could be compensated using the Friis' 
-%noise formula.
-
-The measurement itself is carried out measuring two power levels required in the 
-Y-pa\-ram\-e\-ter; when the DC-voltage is off/shorted (``cold'') and on (``hot''). As 
-for the SA settings, we are measuring noise at a single frequency (using zero-span): 
-a very weak, random signal. Thus, input attenuator should be disabled, and minimum 
-resolution bandwith used. A large averaging factor, say a thousand, is also beneficial. 
-The measurement may take a few minutes, and it's OK; there are only two measurements 
-to be made.
-
-\begin{figure}[h!]
-	\begin{center}
-	\includegraphics[width=0.75\textwidth]{img/nd-ddu-sa.jpg}
-	\caption{Receiver under study.}
-	\label{f:nd}
-	\end{center}
-	\vspace*{-12pt}
-\end{figure}
-
-\subsection{Sensitivity}
-
-In the sensitivity measurement, we're trying to measure the minimum input power at 
-ANT input that results in a detectable signal above the noise floor in the ouput 
-of the DDU module. For this, a measurement setup identical to the one used in the 
-first task may be used, as is shown in the following figure (Fig \ref{f:m4}). This 
-time though it's more than likely that an attenuator is required.
-
-\begin{figure}[h!]
-	\begin{center}
-	\setlength{\unitlength}{1mm}
-	\begin{picture}(142, 13)
-		\linethickness{0.2mm}
-		\put(0, 0.4){\framebox[34mm]{Signal generator}}
-		\put(34, 1.4){\vector(1,0){20}}
-		\put(54, 0.4){\framebox[28mm]{$\mathrm{ANT} \rightarrow \mathrm{RX}_1$}}
-		\put(82, 1.4){\vector(1,0){20}}
-		\put(102, 0.4){\framebox[40mm]{Sprectrum analyzer}}
-		\put(68, 7){\makebox(0,0){DDU module}}
-	\end{picture}
-	\vspace*{\halfLine}
-	\caption{Measurement setup used in the sensitivity measurement.}
-	\label{f:m4}
-	\end{center}
-	\vspace*{-12pt}
-\end{figure}
-
-The measurement starts by measuring the noise floor at 900~MHz without any signal 
-we're hoping to detect. That is, the RF power is switched off at the generator. 
-Then we turn on an input signal that's some dBs sensitivity of $-112.5$~dBm. We 
-gradually increase the power until the signal-to-noise ratio is no less than the 
-10~dB required by the standard. One could also measure the power required to beat 
-the noise just barely, and add the SNR later on if  $P_\mathrm{out}(P_\mathrm{in})$ 
-relation is assumed to be ideal.
-
-Since it's a GSM system, we use the measurement settings as they are defined in 
-the standard. They are as follows: an averaging factor of 500, zero span and 30~Hz 
-video and resolution bandwidths. As the spectrum analyzer input power is expected 
-to be less than $-80$~dBm ($P_\mathrm{SA} \approx P_\mathrm{DDU,\;min} + G_\mathrm{DDU} = -112.5 \mathrm{\;dBm} + 24.4 \mathrm{\;dB}= -88.1 \mathrm{\;dBm}$), 
-it's best to disable the input attenuator.
-
-
-\newpage
-\section{Results}
-
-TODO: Huy and Sampo (general results and intro to more specific results)
-
-
-\subsection{1~dB compression point}
-
-\begin{figure}
-\centering
-\subcaptionbox{$P_\mathrm{out}(P_\mathrm{in})$ using SG and SA}{\epsfig{file=img/PoutPin1.eps, width=0.45\textwidth}}
-\subcaptionbox{$P_\mathrm{out}(P_\mathrm{in})$ using VNA}{\epsfig{file=img/PoutPin2.eps, width=0.45\textwidth}}
-\subcaptionbox{$G(P_\mathrm{in})$ using SG and SA}{\epsfig{file=img/GPin1.eps, width=0.45\textwidth}}
-\subcaptionbox{$G(P_\mathrm{in})$ using VNA}{\epsfig{file=img/GPin2.eps, width=0.45\textwidth}}
-\subcaptionbox{$G(P_\mathrm{out})$ using SG and SA}{\epsfig{file=img/GPout1.eps, width=0.45\textwidth}}
-\subcaptionbox{$G(P_\mathrm{out})$ using VNA}{\epsfig{file=img/GPout2.eps, width=0.45\textwidth}}
-\caption{Results from the 1~dB compression point measurements. Ideal behaviour is shown with red straights, measuremets with blue markers and spline inter-/extrapolant in blue.}\label{f:1dB}
-\end{figure}
-
-
-\subsection{Frequency response}
-
-\begin{figure}[h!]
-	\begin{center}
-	\epsfig{file=img/s12.eps, width=\textwidth}
-	\caption{Results from the diplexer characterization.}
-	\label{f:dpx}
-	\end{center}
-	\vspace*{-12pt}
-\end{figure}
-
 
 \subsection{Noise Temperature}
 
