changed spline to pchip

--- a/final/rf_lab_final2.tex
+++ b/final/rf_lab_final2.tex
@@ -462,7 +462,8 @@ TODO: Huy and Sampo
 \subcaptionbox{$G(P_\mathrm{in})$ using VNA}{\epsfig{file=img/GPin2.eps, width=0.45\textwidth}}
 \subcaptionbox{$G(P_\mathrm{out})$ using SG \& SA}{\epsfig{file=img/GPout1.eps, width=0.45\textwidth}}
 \subcaptionbox{$G(P_\mathrm{out})$ using VNA}{\epsfig{file=img/GPout2.eps, width=0.45\textwidth}}
-\caption{Results from the 1~dB compression point measurements. Ideal behaviour is shown with red straights, measuremets with blue markers and spline inter-/extrapolant in blue.}\label{f:1dB}
+\caption{Results from the 1~dB compression point measurements. Ideal behaviour is shown with red straights, 
+	measuremets with blue markers and Matlab \texttt{'pchip'} interpolant in blue.}\label{f:1dB}
 \end{figure}
 
 \newpage
